crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_decrypt_raw_null_values.snap
---
source: crates/embucket-functions/src/tests/encryption/decrypt_raw.rs
description: "\"SELECT \n        DECRYPT_RAW(NULL, TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'), TO_BINARY('416C736F4E6F745365637265', 'HEX'), TO_BINARY('', 'HEX'), 'AES-GCM', TO_BINARY('00112233445566778899AABBCCDDEEFF', 'HEX')) AS null_ciphertext,\n        DECRYPT_RAW(TO_BINARY('DEADBEEF', 'HEX'), NULL, TO_BINARY('416C736F4E6F745365637265', 'HEX'), TO_BINARY('', 'HEX'), 'AES-GCM', TO_BINARY('00112233445566778899AABBCCDDEEFF', 'HEX')) AS null_key\""
---
Ok(
    [
        "+-----------------+----------+",
        "| null_ciphertext | null_key |",
        "+-----------------+----------+",
        "|                 |          |",
        "+-----------------+----------+",
    ],
)
