crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_encrypt_raw_empty_data.snap
---
source: crates/embucket-functions/src/tests/encryption/encrypt_raw.rs
description: "\"SELECT ENCRYPT_RAW(\n        TO_BINARY('', 'HEX'),  -- empty data\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n        TO_BINARY('416C736F4E6F745365637265', 'HEX')  -- 12-byte IV (24 hex chars)\n    ) AS encrypted\""
---
Ok(
    [
        "+--------------------------------------------------------------------------------------------+",
        "| encrypted                                                                                  |",
        "+--------------------------------------------------------------------------------------------+",
        "| {\"ciphertext\":\"\",\"iv\":\"416C736F4E6F745365637265\",\"tag\":\"0097592FE25D26EF5213284EDEC5835C\"} |",
        "+--------------------------------------------------------------------------------------------+",
    ],
)
