crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_encrypt_raw_null_values.snap
---
source: crates/embucket-functions/src/tests/encryption/encrypt_raw.rs
description: "\"SELECT \n        ENCRYPT_RAW(NULL, TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'), TO_BINARY('416C736F4E6F745365637265', 'HEX')) AS null_data,\n        ENCRYPT_RAW(TO_BINARY('426F6E6A6F7572', 'HEX'), NULL, TO_BINARY('416C736F4E6F745365637265', 'HEX')) AS null_key\""
---
Ok(
    [
        "+-----------+----------+",
        "| null_data | null_key |",
        "+-----------+----------+",
        "|           |          |",
        "+-----------+----------+",
    ],
)
