crates/embucket-functions/src/tests/encryption/snapshots/encryption/query_encrypt_raw_unsupported_method.snap
---
source: crates/embucket-functions/src/tests/encryption/encrypt_raw.rs
description: "\"SELECT ENCRYPT_RAW(\n        TO_BINARY('426F6E6A6F7572', 'HEX'),  -- 'Bonjour' in hex\n        TO_BINARY('0123456789ABCDEF0123456789ABCDEF', 'HEX'),  -- 16-byte key\n        TO_BINARY('416C736F4E6F745365637265', 'HEX'),  -- 12-byte IV (24 hex chars)\n        TO_BINARY('6164646974696F6E616C2064617461', 'HEX'),  -- 'additional data' in hex\n        'AES-CBC'  -- unsupported method\n    ) AS encrypted\""
---
Err(
    "Error: Execution error: Unsupported encryption mode: CBC",
)
